--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,15 @@
   		<artifactId>jackson-databind</artifactId>
   		<version>2.9.10.5</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-beans</artifactId>
+  		<version>5.3.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-context</artifactId>
+  		<version>5.3.1</version>
+  	</dependency>
   </dependencies>
 </project>
