--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <description>Kevin Imitation Bot</description>
   <build>
     <sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>tst</testSourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -55,6 +56,18 @@
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-context</artifactId>
   		<version>5.3.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.easymock</groupId>
+  		<artifactId>easymock</artifactId>
+  		<version>4.2</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.13.1</version>
+  		<scope>test</scope>
   	</dependency>
   </dependencies>
 </project>
