--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 				</configuration>
 				<executions>
 					<execution>
-						<id>make-assembly</id>
+						<id>make-assembly</id> 
 						<phase>package</phase>
 						<goals>
 							<goal>single</goal>
@@ -58,15 +58,15 @@
   		<version>5.3.1</version>
   	</dependency>
   	<dependency>
-  		<groupId>org.easymock</groupId>
-  		<artifactId>easymock</artifactId>
-  		<version>4.2</version>
-  		<scope>test</scope>
-  	</dependency>
-  	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   		<version>4.13.1</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.mockito</groupId>
+  		<artifactId>mockito-core</artifactId>
+  		<version>3.6.28</version>
   		<scope>test</scope>
   	</dependency>
   </dependencies>
